--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="navcss.css" rel="stylesheet">
-    <link href="navjs.js" rel="stylesheet">
   </head>
   <body>
 <div class="container">
@@ -188,6 +187,7 @@
 
     <h1>Hello, world!</h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="navjs.js"></script>
   </body>
 </html>
