--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
 </div>
 
     <h1>Hello, world!</h1>
+<section><aside class="col-lg-2"></aside><div class="col-lg-8"><p>Hej</p></div><aside class="col-lg-2"></aside></section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="navjs.js"></script>
   </body>
 </html>
