--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 <!-- NAVBAR -->
-<div class="container">
+<div class="container-fluid">
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
     	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
@@ -26,7 +26,7 @@
 	<div class="collapse navbar-collapse js-navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li class="dropdown mega-dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <span class="caret"></span></a>				
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>				
 				<ul class="dropdown-menu mega-dropdown-menu">
 					
 		
