--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="navcss.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
   </head>
   <body>
 <!-- NAVBAR -->
@@ -33,9 +34,7 @@
 	</div><!-- /.nav-collapse -->
   </nav>
 </div>
-
-    <h1>Hello, world!</h1>
-<section><aside class="col-lg-2"></aside><div class="col-lg-8"><p>Hej</p></div><aside class="col-lg-2"></aside></section>
+<section><aside class="col-lg-2"></aside><div id="containercolor" class="col-lg-8 col-sm-12 col-xs-12"><p>Hej</p></div><aside class="col-lg-2"></aside></section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="navjs.js"></script>
