--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
 <!-- NAVBAR -->
+<aside class="col-lg-2"></aside>
+<div class="col-lg-8 col-sm-12 col-xs-12 page-1">
 <div class="container-fluid">
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
@@ -28,13 +30,15 @@
 		<ul class="nav navbar-nav">
 			<li class="dropdown mega-dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>				
-				<ul class="dropdown-menu mega-dropdown-menu">
-					
-		
+				<ul class="dropdown-menu mega-dropdown-menu">		
 	</div><!-- /.nav-collapse -->
   </nav>
-</div>
-<section><aside class="col-lg-2"></aside><div id="containercolor" class="col-lg-8 col-sm-12 col-xs-12 page-1"><p>Hej</p></div><aside class="col-lg-2"></aside></section>
+	</div>
+		<section>
+			<div id="containercolor"><p>Hej</p></div>
+		</section>
+</div> <!-- inget under denna div -->
+<aside class="col-lg-2"></aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="navjs.js"></script>
