--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="navcss.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
   </head>
   <body>
 <!-- NAVBAR -->
-<div class="container-fluid">
+<div class="container">
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
     	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
@@ -27,14 +26,15 @@
 	<div class="collapse navbar-collapse js-navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li class="dropdown mega-dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>				
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <span class="caret"></span></a>				
 				<ul class="dropdown-menu mega-dropdown-menu">
 					
 		
 	</div><!-- /.nav-collapse -->
   </nav>
 </div>
-<section><aside class="col-lg-2"></aside><div id="containercolor" class="col-lg-8 col-sm-12 col-xs-12 page-1"><p>Hej</p></div><aside class="col-lg-2"></aside></section>
+
+    <h1>Hello, world!</h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="navjs.js"></script>
