--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 	</div>
 	
 	<div class="collapse navbar-collapse js-navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li class="dropdown mega-dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>				
+        <li class="liBoot">1</li>
+        <li class="liBoot">2</li>
+        <li class="liBoot">3</li>
+        <li class="liBoot">4</li>
+        <li class="liBoot">5</li>
 				<ul class="dropdown-menu mega-dropdown-menu">		
 	</div><!-- /.nav-collapse -->
   </nav>
