--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 <!-- NAVBAR -->
 <aside class="col-lg-2"></aside>
-<div class="col-lg-8 col-sm-12 col-xs-12 page-1">
+<div class="col-lg-8 col-sm-12 col-xs-12">
 <div class="container-fluid">
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
@@ -35,9 +35,13 @@
   </nav>
 	</div>
 		<section>
-			<div id="containercolor"><p>Hej</p></div>
+			<div id="containercolor">
+				<div class"page-1">
+
+				</div>
+			</div>
 		</section>
-</div>
+</div> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="navjs.js"></script>
