--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">My Store</a>
+		<img id="logoMenu" src="img/xlnt-logo-official-new.png">
 	</div>
 	
 	<div class="collapse navbar-collapse js-navbar-collapse">
