--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 	</div>
 		<section>
 			<div id="containercolor">
-				<div class"page-1">
-
+				<div class="page-1">
+					<div class="page-1-div">
+						<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
+						<div class="orange-page-1"></div>
+					</div>
 				</div>
 			</div>
 		</section>
