--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   </head>
   <body>
 <!-- NAVBAR -->
+
 <aside class="col-lg-2"></aside>
 <div class="col-lg-8 col-sm-12 col-xs-12">
-<div class="container-fluid">
+<div class="container-fluid" id="navXlnt">
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
     	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
@@ -34,8 +35,9 @@
         <li class="liBoot">5</li>
 				<ul class="dropdown-menu mega-dropdown-menu">		
 	</div><!-- /.nav-collapse -->
-  </nav>
-	</div>
+  </div>
+	
+
 		<section>
 			<div id="containercolor">
 				<div class="page-1">
