--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					<div class="page-1-div">
 						<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
 						<div class="orange-page-1"></div>
+						<button class="btn-page-1">Kontakta oss</button>
 					</div>
 				</div>
 			</div>
