--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <aside class="col-lg-2"></aside>
 <div class="col-lg-8 col-sm-12 col-xs-12">
 <div class="container-fluid" id="navXlnt">
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top col-lg-8">
     <div class="navbar-header">
     	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
 			<span class="sr-only">Toggle navigation</span>
