--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	</div>
 	
 	<div class="collapse navbar-collapse js-navbar-collapse">
-        <li class="liBoot">1</li>
-        <li class="liBoot">2</li>
-        <li class="liBoot">3</li>
-        <li class="liBoot">4</li>
-        <li class="liBoot">5</li>
+        <li class="liBoot">Hem</li>
+        <li class="liBoot">Responsiv design</li>
+        <li class="liBoot">Tidigare projekt</li>
+        <li class="liBoot">Vårat team</li>
+        <li class="liBoot">Kontakta oss</li>
 				<ul class="dropdown-menu mega-dropdown-menu">		
 	</div><!-- /.nav-collapse -->
   </div>
