--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 					<div class="page-1-div">
 						<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
 						<div class="orange-page-1"></div>
-						<div class="col-lg-4"></div>
-						<button class="btn-page-1 col-lg-4">Kontakta oss</button>
-						<div class="col-lg-4"></div>
+						<button class="btn-page-1 btn-group-justified">Kontakta oss</button>
 					</div>
 				</div>
 			</div>
