added section 2 on index.html

--- a/index.html
+++ b/index.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <title>Boot</title>
-    <!-- Bootstrap -->
-    <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-    <link href="navcss.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
-  </head>
-  <body>
-<!-- NAVBAR -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <title>Boot</title>
+  <!-- Bootstrap -->
+  <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+  <link href="navcss.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+</head>
+<body>
+  <!-- NAVBAR -->
 
-<aside class="col-lg-2"></aside>
-<div class="col-lg-8 col-sm-12 col-xs-12">
-<div class="container-fluid" id="navXlnt">
+  <aside class="col-lg-2"></aside>
+  <div class="col-lg-8 col-sm-12 col-xs-12">
+    <div class="container-fluid" id="navXlnt">
 
-  <nav class="navbar navbar-inverse navbar-fixed-top col-lg-8 col-sm-12 col-xs-12 centernav">
+      <nav class="navbar navbar-inverse navbar-fixed-top col-lg-8 col-sm-12 col-xs-12 centernav">
 
-    <div class="navbar-header">
-    	<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<img id="logoMenu" src="img/xlnt-logo-official-new.png">
-	</div>
-	
-	<div class="collapse navbar-collapse js-navbar-collapse">
+        <div class="navbar-header">
+         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
+           <span class="sr-only">Toggle navigation</span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+         <img id="logoMenu" src="img/xlnt-logo-official-new.png">
+       </div>
+
+       <div class="collapse navbar-collapse js-navbar-collapse">
         <li class="liBoot">Hem</li>
         <li class="liBoot">Responsiv design</li>
         <li class="liBoot">Tidigare projekt</li>
         <li class="liBoot">Vårat team</li>
         <li class="liBoot">Kontakta oss</li>
-				<ul class="dropdown-menu mega-dropdown-menu">		
-	</div><!-- /.nav-collapse -->
-  </div>
-	
+        <ul class="dropdown-menu mega-dropdown-menu">		
+        </div><!-- /.nav-collapse -->
+      </div>
 
-		<section>
-			<div id="containercolor">
-				<div class="page-1">
-					<div class="page-1-div">
-						<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
-						<div class="orange-page-1"></div>
-						<button class="btn-page-1 btn-group-justified">Kontakta oss</button>
-					</div>
-				</div>
-			</div>
-		</section>
+
+      <section>
+       <div id="containercolor">
+        <div class="page-1">
+         <div class="page-1-div">
+          <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
+          <div class="orange-page-1"></div>
+          <button class="btn-page-1 btn-group-justified">Kontakta oss</button>
+        </div>
+      </div>
+    </div>
+    </section>
+  <section>
+    <div id="containercolor">
+      <div class="page-2">
+        <h1 class="page-2-title-h1">Vi är experter på responsiv design!</h1>
+        <div class="orange-page-2"></div>
+        <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
+        <p class="page-2-p">
+          Vi bygger webplatser för alla dina enheter 
+          med en smidig responsiv design 
+          för att få maxial upplevelse på din hemsida. 
+        </p>
+        <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
+
+      </div>
+    </div>
+  </section>
 </div>
 <aside class="col-lg-2"></aside> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-    <script src="navjs.js"></script>
-  </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="navjs.js"></script>
+</body>
 </html>
