--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
        <div class="collapse navbar-collapse js-navbar-collapse">
         <li class="liBoot">Hem</li>
-        <li class="liBoot">Responsiv design</li>
+        <li class="liBoot"><a href="#responsivScroll">Responsiv design</a></li>
         <li class="liBoot">Tidigare projekt</li>
         <li class="liBoot">Vårat team</li>
         <li class="liBoot">Kontakta oss</li>
@@ -53,7 +53,7 @@
     </section>
   <section>
     <div id="containercolor">
-      <div class="page-2">
+      <div class="page-2" id="responsivScroll">
         <h1 class="page-2-title-h1">Vi är experter på responsiv design!</h1>
         <div class="orange-page-2"></div>
         <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
