--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
        <div class="collapse navbar-collapse js-navbar-collapse">
         <li class="liBoot">Hem</li>
         <li class="liBoot"><a href="#responsivScroll">Responsiv design</a></li>
-        <li class="liBoot">Tidigare projekt</li>
-        <li class="liBoot">Vårat team</li>
-        <li class="liBoot">Kontakta oss</li>
+        <li class="liBoot"><a href="#tidigareScroll">Tidigare projekt</a></li>
+        <li class="liBoot"><a href="#teamScroll">Vårat team</a></li>
+        <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
         <ul class="dropdown-menu mega-dropdown-menu">		
         </div><!-- /.nav-collapse -->
       </div>
