--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
-        <li class="liBoot"<a href="#hemScroll">>Hem</a></li>
+        <li class="liBoot"><a href="#hemScroll">Hem</a></li>
         <li class="liBoot"><a href="#responsivScroll">Responsiv design</a></li>
         <li class="liBoot"><a href="#tidigareScroll">Tidigare projekt</a></li>
         <li class="liBoot"><a href="#teamScroll">Vårat team</a></li>
