--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
   <link href="navcss.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 <body>
   <!-- NAVBAR -->
@@ -67,6 +68,65 @@
       </div>
     </div>
   </section>
+  
+  <section>
+  <div class="page-3">
+      <h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
+      <div class="orange-page-3"></div>
+      <img class= "projectImg" src="img/webDevelopment.png" alt="html5-css-JS-laptop">
+      <p class="page-3-p">
+        Ett urval av våra projekt med några av våra nöjda kunder!
+      </p>
+      <a href="views/projects.html" class="btn-page-3">Läs mer</a>
+    </div>
+    </section>
+
+<section> 
+<div class="page-4" id="bg-door">
+
+      <h1 class="page-2-title-h1">Vårat team</h1>
+
+      <div class="p-div">
+        <p class="page-4-p">
+          År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
+          Vill du lära känna oss bättre så kan du trycka här.
+        </p>
+        <img class="teamPic" src="img/teamjpg.jpg" alt="team">
+      </div>
+      <a href="views/team.html" class="btn-page-4">Läs mer!</a>
+      </div>
+</section>
+
+<section>
+  <div class="page-5">
+        <h1 class="page-5-title-h1">Kontakta oss</h1>
+        <div class="orange-page-5"></div>
+        <p class="page-5-p">
+          Det spelar ingen roll om du vill att vi ska designa din sida eller om du bara vill ställa en enkel fråga,
+          skriv till oss och vi kommer att försöka svara så fort vi kan !
+        </p>
+        <form>
+          <input class="contact" type="text" name="name" placeholder="Namn">
+          <input class="contact" type="text" name="email" placeholder="Email">
+          <textarea class="txt-style" placeholder="Kommentar"></textarea> 
+          <input class="btn-page-5" type="submit" name="Skicka">
+        </form>
+      </div>
+      </section>
+      <footer>
+        <h2>Adress</h2>
+        <p>Sjumilaskogen 7</p>
+        <p>1337 - Stockholm</p>
+        <h2>Följ oss</h2>
+        <a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-linkedin icon-size"></i></a>
+
+      </footer>
+
+
+
+
 </div>
 <aside class="col-lg-2"></aside> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
