--- a/index.html
+++ b/index.html
@@ -40,20 +40,62 @@
         </div><!-- /.nav-collapse -->
       </div>
 
-
-      <section>
+      <!-- PAGE-1 -->
+      <section class="container-fluid">
        <div id="containercolor">
         <div class="page-1">
          <div class="page-1-div">
           <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
-          <div class="orange-page-1"></div>
+          <div class="orange-line"></div>
           <button class="btn-page-1 btn-group-justified">Kontakta oss</button>
         </div>
       </div>
     </div>
-    </section>
-  <section>
+  </section>
   
+  <!-- PAGE-2 -->
+  <section class="container-fluid">
+    <div class="page-2">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 col-xs-12">
+          <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 col-xs-12">
+        <div class="orange-line"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 col-xs-12">
+          <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 col-xs-12">
+          <p class="page-2-p">
+            Vi bygger webplatser för alla dina enheter 
+            med en smidig responsiv design 
+            för att få maxial upplevelse på din hemsida. 
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 col-xs-12">
+          <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- PAGE-3 -->
+
+  <!-- PAGE-4 -->
+
+  <!-- PAGE-5 -->
+
+  <!-- FOOTER-->
 
 
 
