no container-fluid on section tag page-1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <!-- PAGE-1 -->
-      <section class="container-fluid">
+      <section>
        <div id="containercolor">
         <div class="page-1">
          <div class="page-1-div">
@@ -57,7 +57,7 @@
   <section class="container-fluid">
     <div class="page-2">
       <div class="row">
-        <div class="col-lg-6 col-sm-12 col-xs-12">
+        <div class="col-lg-8 col-sm-12 col-xs-12 col-centered">
           <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
         </div>
       </div>
