--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <title>Boot</title>
+  <link rel="icon" href="img/xlnthead.png">
   <!-- Bootstrap -->
   <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
   <link href="navcss.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/footer.css">
+
 </head>
 <body>
   <!-- NAVBAR -->
