--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
   </section>
   
   <!-- PAGE-2 -->
-  <section class="container-fluid">
+  <section">
     <div class="page-2">
       <div class="row">
-        <div class="col-lg-8 col-sm-12 col-xs-12 col-centered">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
           <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 col-sm-12 col-xs-12">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
         <div class="orange-line"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 col-sm-12 col-xs-12">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
           <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 col-sm-12 col-xs-12">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
           <p class="page-2-p">
             Vi bygger webplatser för alla dina enheter 
             med en smidig responsiv design 
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-8 col-sm-12 col-xs-12">
+        <div class="col-lg-2 col-lg-offset-6 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
           <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
         </div>
       </div>
