--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-       <a href="index.html">  <img id="logoMenu" src="img/xlnt-logo-official-new.png"></a>
+         <a href="index.html">  <img id="logoMenu" src="img/xlnt-logo-official-new.png"></a>
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
@@ -40,69 +40,71 @@
         <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
         <ul class="dropdown-menu mega-dropdown-menu">		
         </div><!-- /.nav-collapse -->
-      </div>
+      </div> <!--container-fluid -->
 
-      <!-- PAGE-1 -->
-      <section>
-       <div id="containercolor">
-        <div class="page-1">
-         <div class="page-1-div">
-          <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
-          <div class="orange-line"></div>
-          <button class="btn-page-1 btn-group-justified">Kontakta oss</button>
+
+      <div class="container-fluid">
+        <!-- PAGE-1 -->
+        <section>
+         <div id="containercolor">
+          <div class="page-1">
+           <div class="page-1-div">
+            <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
+            <div class="orange-line"></div>
+            <button class="btn-page-1 btn-group-justified">Kontakta oss</button>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  
-  <!-- PAGE-2 -->
-  <section">
-    <div class="page-2">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-          <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
+    </section>
+
+    <!-- PAGE-2 -->
+    <section>
+      <div class="page-2">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <div class="orange-line"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <p class="page-2-p">
+              Vi bygger webplatser för alla dina enheter 
+              med en smidig responsiv design 
+              för att få maxial upplevelse på din hemsida. 
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
+            <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <div class="orange-line"></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-          <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-          <p class="page-2-p">
-            Vi bygger webplatser för alla dina enheter 
-            med en smidig responsiv design 
-            för att få maxial upplevelse på din hemsida. 
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-2 col-lg-offset-6 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
-          <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
 
-  <!-- PAGE-3 -->
+    <!-- PAGE-3 -->
 
-  <!-- PAGE-4 -->
+    <!-- PAGE-4 -->
 
-  <!-- PAGE-5 -->
+    <!-- PAGE-5 -->
 
-  <!-- FOOTER-->
+    <!-- FOOTER-->
+  </div> <!--container-fluid -->
 
 
 
-
-</div>
+</div> <!-- class="col-lg-8 col-sm-12 col-xs-12 -->
 <aside class="col-lg-2"></aside> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
