--- a/index.html
+++ b/index.html
@@ -46,14 +46,24 @@
       <div class="container-fluid">
         <!-- PAGE-1 -->
         <section>
-         <div id="containercolor">
-          <div class="page-1">
-           <div class="page-1-div">
+      <div class="page-1">
+        <div class="page-1-div">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
             <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
-            <div class="orange-line"></div>
-            <button class="btn-page-1 btn-group-justified">Kontakta oss</button>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <div class="orange-line"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
+            <a href="#kontakt" class="btn-page-1 btn-group-justified">Kontakta oss</a>
+          </div>
+        </div>
+      </div>
       </div>
     </section>
 
