--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
+          <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
             <a href="#kontakt" class="btn-page-1 btn-group-justified">Kontakta oss</a>
           </div>
         </div>
@@ -95,8 +95,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
-            <a href="views/responsive.html" class="btn-page-2">Läs mer</a>
+          <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
+            <a href="views/responsive.html" class="btn-page-2 btn-group-justified">Läs mer</a>
           </div>
         </div>
       </div>
