pages 2-5 layed out with rows and columns

--- a/index.html
+++ b/index.html
@@ -94,13 +94,117 @@
 
 
     <!-- PAGE-3 -->
+    <section>
+      <div class="page-3">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <h1 class="page-2-title-h1">Smakprov på våra projekt</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <div class="orange-line"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <img class= "projectImg" src="img/webDevelopment.png" alt="html5-css-JS-laptop">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <p class="page-3-p">
+             Ett urval av våra projekt med några av våra nöjda kunder!
+           </p>
+         </div>
+       </div>
+       <div class="row">
+        <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
+         <a href="views/projects.html" class="btn-page-3">Läs mer</a>
+       </div>
+     </div>
+   </div>
+ </section>
+ <!-- PAGE-4 -->
+ <section>
+   <div class="page-4">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+        <h1 class="page-2-title-h1">Vårat Team</h1>
+      </div>
+    </div>
+    <div class="p-div">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+         <p class="page-4-p">
+          År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
+          Vill du lära känna oss bättre så kan du trycka här.
+        </p>
+        <img class="teamPic" src="img/teamjpg.jpg" alt="team">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+      <a href="views/team.html" class="btn-page-4">Läs mer!</a>
+    </div>
+  </div>
+</div>
+</section>
 
-    <!-- PAGE-4 -->
+<!-- PAGE-5 -->
+<section>
+  <div class="page-5">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+       <h1 class="page-5-title-h1">Kontakta oss</h1>
+     </div>
+   </div>
+   <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+      <div class="orange-line"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+      <p class="page-5-p">
+        Det spelar ingen roll om du vill att vi ska designa din sida eller om du bara vill ställa en enkel fråga,
+        skriv till oss och vi kommer att försöka svara så fort vi kan !
+      </p>
+    </div>
+  </div>
 
-    <!-- PAGE-5 -->
+      <form>
+      <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+        <input class="contact" type="text" name="name" placeholder="Namn">
+         </div>
+  </div>
 
-    <!-- FOOTER-->
-  </div> <!--container-fluid -->
+    <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+        <input class="contact" type="text" name="email" placeholder="Email">
+  </div>
+  </div>
+
+<div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+        <textarea class="txt-style" placeholder="Kommentar"></textarea> 
+         </div>
+  </div>
+
+  <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+        <input class="btn-page-5" type="submit" name="Skicka">
+            </div>
+  </div>
+      </form>
+  
+</div> <!-- page-5 -->
+</section>
+
+<!-- FOOTER-->
+</div> <!--container-fluid -->
 
 
 
