--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
-            <a href="views/responsive.html" class="btn-page-2 btn-group-justified">Läs mer</a>
+            <a href="views/responsive.html" class="btn-page-2 btn-black btn-group-justified">Läs mer</a>
           </div>
         </div>
       </div>
