button fixes color

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
          </div>
        </div>
        <div class="row">
-        <div class="col-lg-3 col-lg-offset-4 col-sm-3 col-sm-offset-4 col-xs-4 col-xs-offset-3">
-         <a href="views/projects.html" class="btn-page-3">Läs mer</a>
+        <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
+         <a href="views/projects.html" class="btn-page-2 btn-black btn-group-justified">Läs mer</a>
        </div>
      </div>
    </div>
@@ -155,8 +155,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-      <a href="views/team.html" class="btn-page-4">Läs mer!</a>
+    <div class="col-lg-8 col-sm-12 col-xs-12 btn-group-justified">
+      <a href="views/team.html" class="btn-page-2 btn-black btn-group-justified">Läs mer!</a>
     </div>
   </div>
 </div>
