--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- NAVBAR -->
 
-  <aside class="col-lg-2"></aside>
+  <aside class="col-lg-2" id="hemScroll"></aside>
   <div class="col-lg-8 col-sm-12 col-xs-12">
     <div class="container-fluid" id="navXlnt">
 
@@ -45,12 +45,12 @@
 
       <div class="container-fluid">
         <!-- PAGE-1 -->
-        <section>
+        <section >
       <div class="page-1">
-        <div class="page-1-div">
+        <div class="page-1-div" >
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
+            <h1 class="page-1-title-h1" >En ny webbyrå med fokus på frontend och responsiv design</h1>
           </div>
         </div>
         <div class="row">
@@ -68,8 +68,8 @@
     </section>
 
     <!-- PAGE-2 -->
-    <section>
-      <div class="page-2">
+    <section id="responsivScroll">
+      <div class="page-2" >
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
             <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
