Added scroll function

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <!-- PAGE-2 -->
-    <section id="responsivScroll">
+    <section  id="responsivScroll">
       <div class="page-2" >
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
@@ -104,7 +104,7 @@
 
 
     <!-- PAGE-3 -->
-    <section>
+    <section id="tidigareScroll">
       <div class="page-3">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
@@ -136,7 +136,7 @@
    </div>
  </section>
  <!-- PAGE-4 -->
- <section>
+ <section id="teamScroll">
    <div class="page-4">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
@@ -163,7 +163,7 @@
 </section>
 
 <!-- PAGE-5 -->
-<section>
+<section id="kontaktScroll">
   <div class="page-5">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
