--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
-            <a href="#kontakt" class="btn-page-1 btn-group-justified">Kontakta oss</a>
+            <a href="#kontaktScroll" class="btn-page-1 btn-group-justified">Kontakta oss</a>
           </div>
         </div>
       </div>
