--- a/index.html
+++ b/index.html
@@ -184,31 +184,20 @@
     </div>
   </div>
 
-      <form>
-      <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <input class="contact" type="text" name="name" placeholder="Namn">
-         </div>
-  </div>
-
-    <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <input class="contact" type="text" name="email" placeholder="Email">
-  </div>
-  </div>
-
-<div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <textarea class="txt-style" placeholder="Kommentar"></textarea> 
-         </div>
-  </div>
-
-  <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <input class="btn-page-5" type="submit" name="Skicka">
-            </div>
-  </div>
-      </form>
+  <form class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+    <div class="form-group">
+      <label for="usr">Name:</label>
+      <input type="text" class="form-control" id="usr">
+    </div>
+    <div class="form-group">
+      <label for="e-mail">E-mail:</label>
+      <input type="text" class="form-control" id="usr">
+    </div>
+   <div class="form-group">
+      <label for="comment">Comment:</label>
+      <textarea class="form-control" rows="5" id="comment"></textarea>
+   </div>
+  </form>
   
 </div> <!-- page-5 -->
 </section>
