--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="page-2" >
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
+            <h1 class="page-h1-black">Vi är experter på responsiv design</h1>
           </div>
         </div>
         <div class="row">
@@ -87,7 +87,7 @@
         </div>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <p class="page-2-p">
+            <p class="page-p-black">
               Vi bygger webplatser för alla dina enheter 
               med en smidig responsiv design 
               för att få maxial upplevelse på din hemsida. 
@@ -108,7 +108,7 @@
       <div class="page-3">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <h1 class="page-2-title-h1">Smakprov på våra projekt</h1>
+            <h1 class="page-h1-black">Smakprov på våra projekt</h1>
           </div>
         </div>
         <div class="row">
@@ -123,7 +123,7 @@
         </div>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <p class="page-3-p">
+            <p class="page-p-black">
              Ett urval av våra projekt med några av våra nöjda kunder!
            </p>
          </div>
@@ -140,7 +140,7 @@
    <div class="page-4">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-        <h1 class="page-2-title-h1">Vårat Team</h1>
+        <h1 class="page-h1-black">Vårat Team</h1>
       </div>
     </div>
     <div class="p-div">
