--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-sm-3 col-xs-4 btn-group-justified">
-            <a href="#kontaktScroll" class="btn-page-1 btn-group-justified">Kontakta oss</a>
+            <a href=".kontaktDirekt" class="btn-page-1 btn-group-justified">Kontakta oss</a>
           </div>
         </div>
       </div>
@@ -164,7 +164,7 @@
 
 <!-- PAGE-5 -->
 <section id="kontaktScroll">
-  <div class="page-5">
+  <div class="page-5 kontaktDirekt"">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
        <h1 class="page-5-title-h1">Kontakta oss</h1>
