--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="p-div">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-         <p class="page-4-p">
+         <p class="page-p-black">
           År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
           Vill du lära känna oss bättre så kan du trycka här.
         </p>
@@ -177,7 +177,7 @@
   </div>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-      <p class="page-5-p">
+      <p class="page-p-black">
         Det spelar ingen roll om du vill att vi ska designa din sida eller om du bara vill ställa en enkel fråga,
         skriv till oss och vi kommer att försöka svara så fort vi kan !
       </p>
