--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
+            <img class="responsiveImg img-responsive" src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
           </div>
         </div>
         <div class="row">
@@ -151,7 +151,7 @@
           År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
           Vill du lära känna oss bättre så kan du trycka här.
         </p>
-        <img class="teamPic" src="img/teamjpg.jpg" alt="team">
+        <img class="teamPic img-responsive" src="img/teamjpg.jpg" alt="team">
       </div>
     </div>
   </div>
