--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <label for="comment">Comment:</label>
       <textarea class="form-control" rows="5" id="comment"></textarea>
    </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn-orange">Submit</button>
   </form>
   
 </div> <!-- page-5 -->
