--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
   <link href="navcss.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/footer.css">
+  <link href="css/footer.css" rel="stylesheet">
+  <link href="bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
 
 </head>
 <body>
@@ -205,12 +206,21 @@
 </section>
 
 <!-- FOOTER-->
-</div> <!--container-fluid -->
+<footer class="col-lg-12">
+  <h2>Adress</h2>
+  <p>Sjumilaskogen 7</p>
+  <p>1337 - Stockholm</p>
+  <h2>Följ oss</h2>
+  <a class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+  <a class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+  <a class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+</footer>
 
 
 
 </div> <!-- class="col-lg-8 col-sm-12 col-xs-12 -->
 <aside class="col-lg-2"></aside> 
+<script src="https://use.fontawesome.com/656255a524.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="navjs.js"></script>
