--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" href="img/xlnthead.png">
   <!-- Bootstrap -->
   <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-  <link href="navcss.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
+  <link href="css/navcss.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="css/footer.css" rel="stylesheet">
   <link href="bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
 
