team.html redone

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 </footer>
 
 
-
+</div>
 </div> <!-- class="col-lg-8 col-sm-12 col-xs-12 -->
 <aside class="col-lg-2"></aside> 
 <script src="https://use.fontawesome.com/656255a524.js"></script>
