--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <!-- PAGE-1 -->
         <section >
       <div class="page-1">
-        <div class="page-1-div" >
+        <div class="page-1-opacity">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-            <h1 class="page-1-title-h1" >En ny webbyrå med fokus på frontend och responsiv design</h1>
+            <h1 class="page-1-header" >En ny webbyrå med fokus på frontend och responsiv design</h1>
           </div>
         </div>
         <div class="row">
@@ -144,11 +144,12 @@
         <h1 class="page-h1-black">Vårat Team</h1>
       </div>
     </div>
-    <div class="p-div">
+    
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
           <div class="orange-line"></div>
-         <p class="page-p-black">
+          <div class="p-div">
+         <p class="page-p-white">
           År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
           Vill du lära känna oss bättre så kan du trycka här.
         </p>
@@ -188,18 +189,18 @@
 
   <form class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
     <div class="form-group">
-      <label for="usr">Name:</label>
-      <input type="text" class="form-control" id="usr">
+      <!-- <label for="usr">Name:</label> -->
+      <input type="text" class="form-control" id="usr" placeholder="Namn">
     </div>
     <div class="form-group">
-      <label for="e-mail">E-mail:</label>
-      <input type="text" class="form-control" id="usr">
+      <!-- <label for="e-mail">E-mail:</label> -->
+      <input type="text" class="form-control" id="usr" placeholder="Email">
     </div>
    <div class="form-group">
-      <label for="comment">Comment:</label>
-      <textarea class="form-control" rows="5" id="comment"></textarea>
+      <!-- <label for="comment">Comment:</label> -->
+      <textarea class="form-control" rows="5" id="comment" placeholder="Kommentar"></textarea>
    </div>
-      <button type="submit" class="btn-orange">Submit</button>
+      <button type="submit" class="btn-orange">Skicka</button>
   </form>
   
 </div> <!-- page-5 -->
