--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
       </div>
     </div>
     
+    <div class="p-div">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
           <div class="orange-line"></div>
-          <div class="p-div">
-         <p class="page-p-white">
+         <p class="page-p-black">
           År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
           Vill du lära känna oss bättre så kan du trycka här.
         </p>
