--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <a href="index.html">  <img id="logoMenu" src="img/xlnt-logo-official-new.png"></a>
+         <a href="index.html">  <img id="logoMenu" alt="XlntLogo" src="img/xlnt-logo-official-new.png"></a>
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
@@ -194,7 +194,7 @@
     </div>
     <div class="form-group">
       <!-- <label for="e-mail">E-mail:</label> -->
-      <input type="text" class="form-control" id="usr" placeholder="Email">
+      <input type="text" class="form-control" id="e-mail" placeholder="Email">
     </div>
    <div class="form-group">
       <!-- <label for="comment">Comment:</label> -->
