Validation for all html on xlntBOOT done

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <li class="liBoot"><a href="#tidigareScroll">Tidigare projekt</a></li>
         <li class="liBoot"><a href="#teamScroll">Vårat team</a></li>
         <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
-        <ul class="dropdown-menu mega-dropdown-menu">		
+        <ul class="dropdown-menu mega-dropdown-menu"></ul>	
         </div><!-- /.nav-collapse -->
+        </nav>
       </div> <!--container-fluid -->
 
 
