--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Boot</title>
   <link rel="icon" href="img/xlnthead.png">
   <!-- Bootstrap -->
-  <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+  <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/navcss.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/footer.css" rel="stylesheet">
@@ -224,7 +224,7 @@
 <aside class="col-lg-2"></aside> 
 <script src="https://use.fontawesome.com/656255a524.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script src="navjs.js"></script>
 </body>
 </html>
